# summer_practice_MCST_entrance_tasks

./: .clang-format  .clangd  CMakeLists.txt  README.md  makefile
TASK-1/src/: main.c
TASK-10/src/: main.c
TASK-2/include/: io_uring.h  unix.h
TASK-2/src/: main.c  unix_bind.c  unix_close.c  unix_open.c  unix_send.c
TASK-3/include/: sort.h
TASK-3/src/: get_max_length.c  main.c  radix_sort.c
TASK-4/src/: main.c
TASK-5/src/: main.c
TASK-6/include/: types.h
TASK-6/src/: main.c
TASK-7/src/: main.c
TASK-8/src/: main.c
TASK-9/src/: main.c
